--- a/examples/demos/app_dronePong/Makefile
+++ b/examples/demos/app_dronePong/Makefile
@@ -15,6 +15,14 @@
 CRAZYFLIE_BASE := ../../..
 
 #
+# To include header files from other directories
+#
+EXTRA_CFLAGS += -I$(PWD)/src/HAL
+EXTRA_CFLAGS += -I$(PWD)/src/DL
+EXTRA_CFLAGS += -I$(PWD)/src/AL
+
+
+#
 # We override the default OOT_CONFIG here, we could also name our config
 # to oot-config and that would be the default.
 #
